# MindMove

./: calibrate.py  check_calibration.py  live-test-classical.py  preprocessing_visualization.ipynb  requirements.txt  saed_merged.npz  signal-check.py
calibration/: merge_calibration.py
models/: live-test-classical.py  pyproject.toml  saed_merged_model  train_classical.py
