[project]
name = "bci-wheelchair-control"
version = "0.1.0"
description = "EEG-Controlled Wheelchair BCI System"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
